<resources>
    <string name="app_name">Wake me up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //menu drawer
    <string name="principal">Principal</string>
    <string name="history">Histórico</string>
    <string name="about">Sobre nosotros</string>

    //about
    <string name="team">Equipo</string>
    <string name="version">Version</string>
    <string name="nro_version">1.0.0</string>
    <string name="author">Anbora labs</string>
    <string name="country">Colombia</string>
    <string name="fork_on_github">Fork on Github</string>
    <string name="anbora_email">anboralabs@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_alarm">Alarma</string>
    <string name="description_alarm">Direccion</string>
    <string name="title_activity_maps">Map</string>
    <string name="where_is_the_place">A donde quieres ir?</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click para desactivar la alarma
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <string name="add_alarm">Agregar</string>
    <string name="cancel">Cancelar</string>

    <string name="task_ok">Se agregaron las alarmas</string>
    <string name="task_del">Se borraron las alarmas</string>
    <string name="title_activity_add_alarm">Add Alarm</string>
    <string name="dialog_before_run_title">titulo permiso</string>
    <string name="dialog_before_run_message">mensaje permiso</string>
    <string name="dialog_positive_button">ok</string>
    <string name="current_location">Mi ubicacion</string>
    <string name="tile_label">Wake me up</string>
    <string name="service_active">On</string>
    <string name="service_inactive">Off</string>

    <string name="unable_service">Activar Alarmas</string>

    <string name="launch_activity">Launch activity</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Buscando alarmas: %1$s</string>


    <string name="unable_alarm">Desactivar Alarma</string>
    <string name="title_activity_notified_alarm">Activado en...</string>
    <string name="title_activity_settings">Settings</string>

    <string name="place_active">Lugar donde se activo</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Preferences categories General -->
    <string name="pref_title_general">General</string>

    <string name="pref_general_name_default_value">Anbora Labs</string>
    <string name="pref_general_name_key">name</string>
    <string name="pref_general_name_title">Nombre</string>

    <string name="pref_general_email_default_value">anboralabs@gmail.com</string>
    <string name="pref_general_email_key">email</string>
    <string name="pref_general_email_title">Correo electronico</string>

    <!-- Preferences categories Alarmas -->
    <string name="pref_title_alarm">Alarmas</string>

    <string name="pref_alarm_time_dialog_title">Tiempo de actualizacion GPS</string>
    <string name="pref_alarm_time_key">time_key_alarm</string>
    <string name="pref_alarm_time_title">Tiempo para localizacion GPS</string>
    <string name="pref_alarm_time_summary">Intervalo de tiempo para actualizar GPS</string>

    <string name="pref_alarm_area_dialog_title">Area de las alarmas</string>
    <string name="pref_alarm_area_key">area_key_alarm</string>
    <string name="pref_alarm_area_title">Area de las alarmas</string>
    <string name="pref_alarm_area_summary">Area para la creacion de alarmas</string>

    <!-- Preferences categories Notification -->
    <string name="pref_title_notification">Notificaciones</string>

    <string name="pref_notification_key">notifications</string>
    <string name="pref_notification_title">Ver notificaciones</string>

    <string name="pref_notification_sound">Timbre</string>
    <string name="pref_notification_sound_key">sound</string>
    <string name="pref_notification_sound_summary">Elige tu timbre</string>

    <string name="pref_notification_vibrate_title">Vibrar</string>
    <string name="pref_notification_vibrate_key">vibrate</string>
    <string name="pref_notification_vibrate_summary">Vibrate con nuevas notificaciones</string>
    <string name="notifications_new_message">notifications_new_message</string>




</resources>
