<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_title_general">

        <EditTextPreference
            android:defaultValue="@string/pref_general_name_default_value"
            android:key="@string/pref_general_name_key"
            android:summary="@string/pref_general_name_default_value"
            android:title="@string/pref_general_name_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_general_email_default_value"
            android:key="@string/pref_general_email_key"
            android:summary="@string/pref_general_email_default_value"
            android:title="@string/pref_general_email_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_alarm">

        <ListPreference
            android:defaultValue="@integer/default_time"
            android:dialogTitle="@string/pref_alarm_time_dialog_title"
            android:entries="@array/pref_alarm_time_entries"
            android:entryValues="@array/pref_alarm_time_values"
            android:key="@string/pref_alarm_time_key"
            android:summary="@string/pref_alarm_time_summary"
            android:title="@string/pref_alarm_time_title" />

        <ListPreference
            android:defaultValue="@integer/default_meters"
            android:dialogTitle="@string/pref_alarm_area_dialog_title"
            android:entries="@array/pref_alarm_area_entries"
            android:entryValues="@array/pref_alarm_area_values"
            android:key="@string/pref_alarm_area_key"
            android:summary="@string/pref_alarm_area_summary"
            android:title="@string/pref_alarm_area_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notification">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_notification_key"
            android:title="@string/pref_notification_title" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:key="@string/pref_notification_sound_key"
            android:ringtoneType="notification"
            android:summary="@string/pref_notification_sound_summary"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_notification_vibrate_key"
            android:summary="@string/pref_notification_vibrate_summary"
            android:title="@string/pref_notification_vibrate_title" />
    </PreferenceCategory>

</PreferenceScreen>