<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_leak_add_black_24dp"
            android:title="@string/principal" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/history" />
    </group>

    <item android:title="Team">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_copyright_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
