<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/add_alarm_dialog"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <fragment
            android:id="@+id/add_map_alarm"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <requestFocus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </fragment>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtAddress"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/where_is_the_place" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ok_add_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_alarm" />

            <Button
                android:id="@+id/dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>
</layout>